update elasticsearch response
